# site

./: .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.md  Travis-integration.md  environment.yml  genindex.html  index.html  index.md  make.bat  objects.inv  push.sh  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  slide.py  travis.yml
2017/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2018/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
Lesson/: AutoGIS15_Lecture6_PythonGIS.rst
_sources/: index.rst.txt
_static/: documentation_options.js
ci/: environment.in.yml  environment.yml  py38-book-building.yaml
course-info/: Installing_Anacondas_GIS.html  License-terms.html  course-environment-components.html  course-info.html  grading.html  install-using-yml.html  learning-goals.html  python-vocabulary.html  resources.html
data/: Corine2012_Uusimaa.dbf  Corine2012_Uusimaa.prj  Corine2012_Uusimaa.shp.xml  Corine2012_Uusimaa.shx  DAMSELFISH_distributions.dbf  DAMSELFISH_distributions.prj  DAMSELFISH_distributions.sbn  DAMSELFISH_distributions.sbx  DAMSELFISH_distributions.shp.xml  DAMSELFISH_distributions.shx  Helsinki_borders.dbf  Helsinki_borders.shx  Kamppi_Helsinki_Finland_buildings.dbf  Kamppi_Helsinki_Finland_buildings.shp  Kamppi_Helsinki_Finland_buildings.shx  Kamppi_Helsinki_Finland_nodes.shp  Kamppi_Helsinki_Finland_nodes.shx  Kamppi_Helsinki_Finland_route_OD_points.dbf  Kamppi_Helsinki_Finland_route_OD_points.shx  Kamppi_nodes.dbf  (+36 more)
(+1595 files in other folders)
